# Graph-Pooling-Lab

./: .gitignore  AGENT_REFERENCE.md  PROTOCOL.md  README.md  pyproject.toml  requirements.txt
config/: experiment.toml
examples/: custom_pool_plugin.py
scripts/: check_dense_adapter.py  smoke_test.sh
src/gplab/: runtime.py  train_loop.py
src/gplab/benchmark/: __init__.py  case.py  comparison.py  execution.py  plan.py  protocol.py  request.py  seeds.py
src/gplab/cli/: expand_cases.py  normalize_train_job.py  options.py  output.py  query.py  replay.py  request.py  run_train_job.py  train_cli.py  validate.py
src/gplab/data/: dataset.py  sparse.py
src/gplab/experiment/: __init__.py  builders.py  execute.py  identity.py  query.py  record.py  record_log.py  reproducibility.py  request.py  spec.py  train_result.py
src/gplab/jobs/: __init__.py  defaults.py  io.py  manifest.py  request.py  schema.py
src/gplab/layers/: resolver.py
src/gplab/layers/pool/: __init__.py  contracts.py  dense_pool_adapter.py  sag_pool.py  sparse_pool.py
src/gplab/model/: classifier_base.py  classifier_plain.py  classifier_sum.py  execution.py
src/gplab/utils/: jsonl.py  registry.py  validation.py
